enabled LPG on Document